# AlzDiscovery

./: pyproject.toml
research/: genes.py  get_alzheimer_mouse_data.py  get_dna_sequence.py  grapg.py  pipeline.py  process_data_files.py
results/: combination_therapies.json  compound_interactions.json  compound_ranking.txt  differential_expression_results.csv  enrichment_results.csv  literature_validation.json  potential_compounds.json
